ipc/ipdl/test/ipdl/error/lex1.ipdl
//error: bad syntax near `slkdjfl'
slkdjfl*&^*
